# night_runner

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: logger.hpp  video_processor.hpp
scripts/: night_runner.sh  stop.sh
src/: logger.cpp  main.cpp  video_capture.py  video_processor.cpp
